# xmpp-client-rs

./: Cargo.toml
src/: account.rs  async_iq.rs  config.rs  core.rs  crypto.rs  i18n.rs  lib.rs  message.rs
src/mods/: disco.rs  mod.rs
