[package]
name = "xmpp-client-rs"
version = "0.1.3-dev"
edition = "2018"
license = "MPL-2.0"
description = "Simple xmpp library"
repository = "https://github.com/Choochmeque/xmpp-client-rs"
keywords = ["xmpp", "crate"]

[dependencies]
tokio-xmpp = "4.0.0"
xmpp-parsers = "0.21.0"
jid = "0.11.1"
anyhow = "^1.0"
chrono = "^0.4"
futures = "^0.3"
log = "^0.4"
minidom = "0.16.0"
rand = "0.9.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1.10", features = ["full"] }
toml = "^0.5"
uuid = { version = "^1.7", features = ["v4"] }

[profile.release]
debug = true